# ANPR-Camera

./: README.md  anpr.py  app.py  requirements.txt
anpr_camera/: pyproject.toml
anpr_camera/anpr_camera/: locate_numberplate.py  locate_numberplate.py.py  numberplate_ocr.py
templates/: index.html
